--- a/main.css
+++ b/main.css
@@ -4,6 +4,10 @@ pre {
   font-size: 14px;
 }
 
+body {
+  font-family: 'Source Sans Pro';
+}
+
 .CodeMirror {
     line-height: 1.21429em;
     font-size: 14px;
@@ -33,4 +37,11 @@ pre {
     padding: 0;
     border: 0;
     border-radius: 0;
+}
+
+/* By default the notebook centers all images. */
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
