--- a/styles/main.css
+++ b/styles/main.css
@@ -88,6 +88,10 @@ img
     box-shadow: 0 1px 3px rgba(0,0,0,.12), 0 1px 2px rgba(0,0,0,.24);
 }
 
+.cell.selected {
+    box-shadow: 0 1px 8px rgba(0,0,0,.12), 0 1px 8px rgba(0,0,0,.24);
+}
+
 .cell:hover .input_area .cell_inputs,
 .cell:active .input_area .cell_inputs,
 .cell:focus .input_area .cell_inputs {
