--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,7 @@
 /*
   Globals
  */
+
 pre
 {
     font-size: 14px;
@@ -83,7 +84,9 @@ img
 
 .cell
 {
-   transition: all .1s ease-in-out;
+    position: relative;
+
+    transition: all .1s ease-in-out;
 }
 
 .cell:hover
@@ -91,14 +94,61 @@ img
     box-shadow: 1px 1px 3px rgba(0,0,0,.12), -1px -1px 3px rgba(0,0,0,.12);
 }
 
-.cell.selected {
+.cell.selected
+{
     box-shadow: 3px 3px 9px rgba(0,0,0,.12), -3px -3px 9px rgba(0,0,0,.12);
 }
 
 .cell:hover .input_area .cell_inputs,
 .cell:active .input_area .cell_inputs,
-.cell:focus .input_area .cell_inputs {
-  background-color: #e2dfe3;
+.cell:focus .input_area .cell_inputs
+{
+    background-color: #e2dfe3;
+}
+
+.cell_toolbar-mask
+{
+    position: absolute;
+    top: -29px;
+    right: -5px;
+
+    overflow: hidden;
+
+    padding: 5px 5px 0;
+}
+
+.cell_toolbar
+{
+    background: white;
+    box-shadow: 0 1px 2px 0 rgba(0,0,0,.50);
+}
+
+.cell_toolbar button
+{
+    display: inline-block;
+
+    width: 22px;
+    height: 20px;
+    padding: 2px 4px;
+
+    text-align: center;
+
+    border: none;
+    outline: none;
+    background: none;
+}
+
+.cell_toolbar button i
+{
+    font-size: 16px;
+    line-height: 1;
+
+    color: #aaa;
+}
+
+.cell_toolbar button i:hover
+{
+    color: #555;
 }
 
 .cell_markdown
