--- a/styles/main.css
+++ b/styles/main.css
@@ -109,10 +109,9 @@ img
 .cell_toolbar-mask
 {
     position: absolute;
-    top: -29px;
+    top: -5px;
     right: -5px;
-
-    overflow: hidden;
+    z-index: 99;
 
     padding: 5px 5px 0;
 }
