Rely on the new ansi-to-react

--- a/src/notebook/styles/main.css
+++ b/src/notebook/styles/main.css
@@ -258,3 +258,8 @@ img
   vertical-align: text-bottom;
   font-weight: bold;
 }
+
+code {
+  font-family: 'Source Code Pro';
+  font-size: '14px';
+}
