--- a/src/notebook/styles/main.css
+++ b/src/notebook/styles/main.css
@@ -102,7 +102,7 @@ img
 }
 
 .cell.focused {
-  box-shadow: 0px 8px 4px rgba(0,0,0,.12);
+    box-shadow: 3px 3px 9px rgba(0,0,0,.12), -3px -3px 9px rgba(0,0,0,.12);
 }
 
 .cell:hover .input_area .cell_inputs,
