--- a/src/notebook/styles/main.css
+++ b/src/notebook/styles/main.css
@@ -107,7 +107,8 @@ img
 
 .cell:hover .input_area .cell_inputs,
 .cell:active .input_area .cell_inputs,
-.cell:focus .input_area .cell_inputs
+.cell:focus .input_area .cell_inputs,
+.cell.focused .input_area .cell_inputs
 {
     background-color: #e2dfe3;
 }
