--- a/src/notebook/styles/main.css
+++ b/src/notebook/styles/main.css
@@ -22,8 +22,8 @@ body
     font-family: 'Source Sans Pro';
     font-size: 16px;
     line-height: 22px;
-
-    color: rgb(51,51,51);
+    background-color: var(--main-bg-color);
+    color: var(--main-fg-color);
 }
 
 img
