Dark theming, CM variable-ization

--- a/src/notebook/styles/main.css
+++ b/src/notebook/styles/main.css
@@ -38,52 +38,7 @@ img
 th,
 td {
     padding: 0.5em 1em;
-    border: 1px solid #cbcbcb;
-}
-
-/*
-    Codemirror
- */
-
-.CodeMirror
-{
-    font-family: 'Source Code Pro';
-    font-size: 14px;
-    line-height: 20px;
-
-    height: auto;
-
-    background: none;
-}
-
-.CodeMirror-scroll
-{
-    overflow-x: auto;
-    overflow-y: hidden;
-}
-
-.CodeMirror-lines
-{
-    padding: .4em;
-}
-
-.CodeMirror-linenumber
-{
-    padding: 0 8px 0 4px;
-}
-
-.CodeMirror-gutters
-{
-    border-top-left-radius: 2px;
-    border-bottom-left-radius: 2px;
-}
-
-.CodeMirror pre
-{
-    padding: 0;
-
-    border: 0;
-    border-radius: 0;
+    border: 1px solid var(--primary-border);
 }
 
 /*
@@ -98,7 +53,7 @@ td {
 .cell
 {
     position: relative;
-
+    background: var(--cell-bg);
     transition: all .1s ease-in-out;
 }
 
@@ -114,14 +69,14 @@ td {
 .cell:hover .input_area .cell_inputs,
 .cell:active .input_area .cell_inputs
 {
-    background-color: #eeedee;
+    background-color: var(--cell-bg-hover);
 }
 
 
 .cell:focus .input_area .cell_inputs,
 .cell.focused .input_area .cell_inputs
 {
-    background-color: #e2dfe3;
+    background-color: var(--cell-bg-focus);
 }
 
 .cell_toolbar-mask
@@ -165,12 +120,12 @@ td {
     font-size: 16px;
     line-height: 1;
 
-    color: #aaa;
+    color: var(--toolbar-button);
 }
 
 .cell_toolbar button i:hover
 {
-    color: #555;
+    color: var(--toolbar-button-hover);
 }
 
 .cell_markdown
@@ -181,7 +136,7 @@ td {
 .pagers
 {
     padding: 10px 50px 10px 50px;
-    background-color: #fafafa;
+    background-color: var(--pager-bg);
     word-wrap: break-word;
 }
 
@@ -212,8 +167,8 @@ td {
 
     text-align: center;
 
-    color: #8c8a8e;
-    background-color: #fafafa;
+    color: var(--input-color);
+    background-color: var(--pager-bg);
 
     flex: 0 0 auto;
 }
@@ -244,7 +199,7 @@ td {
 
 .creator-tool {
   display: inline-block;
-  background: white;
+  background: var(--main-bg-color);
   box-shadow: 0 1px 2px 0 rgba(0,0,0,.50);
   margin-top: -15px;
   pointer-events: all;
@@ -271,16 +226,16 @@ td {
   font-size: 17px;
   line-height: 1;
 
-  color: #aaa;
+  color: var(--toolbar-button);
 }
 
 .creator-tool button i:hover
 {
-  color: #555;
+  color: var(--toolbar-button-hover);
 }
 
 .creator-tool .creator-label {
-  color: #aaa;
+  color: var(--toolbar-button);
   font-size: 12px;
   text-transform: uppercase;
   padding: 5px;
@@ -292,4 +247,117 @@ code {
   font-family: 'Source Code Pro';
   white-space: pre;
   font-size: 14px;
+}
+
+/*
+    Codemirror
+ */
+
+.CodeMirror
+{
+    font-family: 'Source Code Pro';
+    font-size: 14px;
+    line-height: 20px;
+
+    height: auto;
+
+    background: none;
+}
+
+.CodeMirror-cursor
+{
+    border-left-width: 1px;
+    border-left-style: solid;
+    border-left-color: var(--cm-color)
+}
+
+.CodeMirror-scroll
+{
+    overflow-x: auto;
+    overflow-y: hidden;
+}
+
+.CodeMirror-lines
+{
+    padding: .4em;
+}
+
+.CodeMirror-linenumber
+{
+    padding: 0 8px 0 4px;
+}
+
+.CodeMirror-gutters
+{
+    border-top-left-radius: 2px;
+    border-bottom-left-radius: 2px;
+}
+
+.CodeMirror pre
+{
+    padding: 0;
+
+    border: 0;
+    border-radius: 0;
+}
+
+.cm-s-composition.CodeMirror {
+	font-family: 'Source Code Pro', monospace;
+	letter-spacing: 0.3px;
+	word-spacing: 1px;
+	background: var(--cm-background);
+	color: var(--cm-color);
+}
+.cm-s-composition .CodeMirror-lines {
+  padding: 10px;
+}
+.cm-s-composition .CodeMirror-gutters {
+	box-shadow: 1px 0 2px 0 rgba(0, 0, 0, 0.5);
+	-webkit-box-shadow: 1px 0 2px 0 rgba(0, 0, 0, 0.5);
+	background-color: var(--cm-gutter-bg);
+	padding-right: 10px;
+	z-index: 3;
+	border: none;
+}
+
+.cm-s-composition span.cm-comment { color: var(--cm-comment) }
+.cm-s-composition span.cm-keyword { line-height: 1em; font-weight: bold; color: var(--cm-keyword); }
+.cm-s-composition span.cm-string { color: var(--cm-string); }
+.cm-s-composition span.cm-builtin { line-height: 1em; font-weight: bold; color: var(--cm-builtin); }
+.cm-s-composition span.cm-special { line-height: 1em; font-weight: bold; color: var(--cm-special); }
+.cm-s-composition span.cm-variable { color: var(--cm-variable); }
+.cm-s-composition span.cm-number, .cm-s-composition span.cm-atom { color: var(--cm-number); }
+.cm-s-composition span.cm-meta { color: var(--cm-meta); }
+.cm-s-composition span.cm-link { color: var(--cm-link); }
+
+.cm-s-composition .CodeMirror-activeline-background { background: var(--cm-activeline-bg); }
+.cm-s-composition .CodeMirror-matchingbracket { outline:1px solid var(--cm-matchingbracket-outline); color:var(--cm-matchingbracket-color) !important; }
+
+/* Overwrite some of the hint Styling */
+
+.CodeMirror-hints {
+
+  -webkit-box-shadow: 2px 3px 5px rgba(0,0,0,.2);
+  -moz-box-shadow: 2px 3px 5px rgba(0,0,0,.2);
+  box-shadow: 2px 3px 5px rgba(0,0,0,.2);
+  border-radius: 0px;
+  border: none;
+  padding:0;
+
+  background: var(--cm-hint-bg);
+  font-size: 90%;
+  font-family: 'Source Code Pro', monospace;
+
+  overflow-y: auto;
+}
+
+.CodeMirror-hint {
+  border-radius: 0px;
+  max-width: 19em;
+  white-space: pre;
+  cursor: pointer;
+}
+
+li.CodeMirror-hint-active {
+  background: var(--cm-hint-bg-active);
 }
