--- a/static/styles/theme-light.css
+++ b/static/styles/theme-light.css
@@ -8,6 +8,7 @@
   --cell-bg-hover: #eeedee;
   --cell-bg-focus: #e2dfe3;
 
+  --toolbar-bg: white;
   --toolbar-button: #aaa;
   --toolbar-button-hover: #555;
 
