--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -96,7 +96,7 @@ td {
 .cell_toolbar
 {
     display: inline-box;
-    background: white;
+    background: var(--toolbar-bg);
     box-shadow: 0 1px 2px 0 rgba(0,0,0,.50);
 }
 
