--- a/static/styles/theme-light.css
+++ b/static/styles/theme-light.css
@@ -34,6 +34,8 @@
   --cm-matchingbracket-outline: grey;
   --cm-matchingbracket-color: black;
 
-  --cm-hint-bg: white;
+  --cm-hint-color: var(--cm-color);
+  --cm-hint-color-active: var(--cm-color);
+  --cm-hint-bg: var(--main-bg-color);
   --cm-hint-bg-active: #ABD1FF;
 }
