--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -119,7 +119,7 @@ td {
 
     width: 22px;
     height: 20px;
-    padding: 2px 4px;
+    padding: 0px 4px;
 
     text-align: center;
 
@@ -128,15 +128,15 @@ td {
     background: none;
 }
 
-.cell_toolbar button i
+.cell_toolbar button span
 {
-    font-size: 16px;
+    font-size: 15px;
     line-height: 1;
 
     color: var(--toolbar-button);
 }
 
-.cell_toolbar button i:hover
+.cell_toolbar button span:hover
 {
     color: var(--toolbar-button-hover);
 }
@@ -229,7 +229,7 @@ td {
 
   width: 22px;
   height: 20px;
-  padding: 2px 4px;
+  padding: 0px 4px;
 
   text-align: center;
 
@@ -238,27 +238,17 @@ td {
   background: none;
 }
 
-.creator-tool button i
+.creator-tool button span
 {
-  /* These icons are thin, use a larger font than the cell toolbar */
-  font-size: 17px;
+  font-size: 15px;
   line-height: 1;
 
   color: var(--toolbar-button);
 }
 
-.creator-tool button i:hover
+.creator-tool button span:hover
 {
   color: var(--toolbar-button-hover);
-}
-
-.creator-tool .creator-label {
-  color: var(--toolbar-button);
-  font-size: 12px;
-  text-transform: uppercase;
-  padding: 5px;
-  vertical-align: text-bottom;
-  font-weight: bold;
 }
 
 code {
