--- a/static/styles/theme-classic.css
+++ b/static/styles/theme-classic.css
@@ -76,8 +76,9 @@
 
 .draggable-cell {
   padding: 0px !important;
-  border-top-width: 0px !important;
-  border-bottom-width: 0px !important;
+  border-top-width: 1px !important;
+  border-bottom-width: 1px !important;
+  margin-bottom: -1px;
 }
 
 .cell-toolbar-mask {
