--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -3,6 +3,7 @@
  */
 :root {
   --prompt-width: 50px;
+  --cell-placeholder-opacity: 0.3;
 }
 
 #app {
@@ -164,6 +165,32 @@ td {
 {
     padding: 10px 10px 10px var(--prompt-width);
     outline: none;
+}
+
+.cell-placeholder {
+    text-align: center;
+    color: var(--main-fg-color);
+    padding: 10px;
+    opacity: var(--cell-placeholder-opacity);
+}
+
+.sticky-cell-container {
+    background: var(--main-bg-color);
+    box-shadow: 0 1px 2px 0 rgba(0,0,0,.50);
+
+    top: 0px;
+    position: absolute;
+    z-index: 999;
+    width: 100%;
+    max-height: 50%;
+
+    padding-bottom: 10px;
+    padding-top: 20px;
+    overflow: auto;
+}
+
+.sticky-cell-container:empty {
+    display: none;
 }
 
 .pagers
