--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -179,7 +179,7 @@ td {
     box-shadow: 0 1px 2px 0 rgba(0,0,0,.50);
 
     top: 0px;
-    position: absolute;
+    position: fixed;
     z-index: 300;
     width: 100%;
     max-height: 50%;
