Pumpkin: absolute->fixed.
Cause I never remember which one is which is which in css and even
actually never remember that the 2 exists. And this one is the one we
want.

--- a/static/styles/theme-halloween.css
+++ b/static/styles/theme-halloween.css
@@ -54,7 +54,7 @@ body{
 }
 body::after {
   z-index:-1;
-  position:absolute;
+  position:fixed;
   content: '';
   background-image: url('./halloween/pumpkin.png');
   bottom:0px;
