Add widget themes (excluding slider)

--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -4,6 +4,48 @@
 :root {
   --prompt-width: 50px;
   --cell-placeholder-opacity: 0.3;
+
+  --main-bg-color: white;
+  --main-fg-color: rgb(51,51,51);
+
+  --primary-border: #cbcbcb;
+
+  --cell-bg: white;
+  --cell-bg-hover: #eeedee;
+  --cell-bg-focus: #e2dfe3;
+
+  --toolbar-bg: white;
+  --toolbar-button: #aaa;
+  --toolbar-button-hover: #555;
+
+  --pager-bg: #fafafa;
+  --input-color: #8c8a8e;
+
+  --cm-background: #fafafa;
+  --cm-color: black;
+
+  --cm-gutter-bg: white;
+
+  --cm-comment: #a86;
+  --cm-keyword: blue;
+  --cm-string: #a22;
+  --cm-builtin: #077;
+  --cm-special: #0aa;
+  --cm-variable: black;
+  --cm-number: #3a3;
+  --cm-meta: #555;
+  --cm-link: #3a3;
+  --cm-operator: black;
+  --cm-def: black;
+
+  --cm-activeline-bg: #e8f2ff;
+  --cm-matchingbracket-outline: grey;
+  --cm-matchingbracket-color: black;
+
+  --cm-hint-color: var(--cm-color);
+  --cm-hint-color-active: var(--cm-color);
+  --cm-hint-bg: var(--main-bg-color);
+  --cm-hint-bg-active: #ABD1FF;
 }
 
 #app {
@@ -419,4 +461,298 @@ code {
 li.CodeMirror-hint-active {
   background: var(--cm-hint-bg-active);
   color: var(--cm-hint-color-active);
+}
+
+/*
+Widgets
+ */
+ :root {
+  --widgets-description-width: 100px;
+  --widgets-description-padding: 2px;
+  --widgets-default-margin: 2px;
+  --widgets-default-width: 250px;
+  --widgets-default-height: 25px;
+  --widgets-default-lineheight-offset: 2px;
+  --widgets-text-voffset: 2px;
+  --widgets-text-bg: var(--cm-background);
+  --widgets-text-color: var(--cm-color);
+  --widgets-button-minwidth: 100px;
+  --widgets-button-bg: var(--toolbar-bg);
+  --widgets-button-border: 1px solid var(--toolbar-button);
+  --widgets-button-color: var(--toolbar-button);
+  --widgets-button-bg-hover: var(--toolbar-bg);
+  --widgets-button-border-hover: 1px solid var(--toolbar-button-hover);
+  --widgets-button-color-hover: var(--toolbar-button-hover);
+  --widgets-togglebutton-bg-active: var(--cm-activeline-bg);
+  --widgets-togglebutton-bg-active-hover: var(--cm-activeline-bg);
+  --widgets-dropdown-toggle-width: 25px;
+  --widgets-container-border: var(--widgets-button-border);
+  --widget-invalid-color: red;
+  --widget-valid-color: lime;
+  --widget-progress-bg: var(--cm-background);
+  --widget-progress-color: var(--cm-activeline-bg);
+}
+
+.cell-widget-area .widget-hprogress .progress {
+  display: inline-block;
+  background: var(--widget-progress-bg);
+  width: var(--widgets-default-width);
+  height: var(--widgets-default-height);
+}
+
+.cell-widget-area .widget-hprogress .progress .progress-bar {
+  display: block;
+  background: var(--widget-progress-color);
+}
+
+.cell-widget-area .widget-hbox {
+  display: flex;
+}
+
+.cell-widget-area .widget-label {
+  color: var(--main-fg-color);
+  display: flex;
+  text-align: end;
+  width: var(--widgets-description-width);
+  margin-right: var(--widgets-description-padding);
+  line-height: var(--widgets-default-height);
+}
+
+.cell-widget-area .widget-text,
+.cell-widget-area .widget-valid,
+.cell-widget-area .widget-latex,
+.cell-widget-area .widget-hprogress,
+.cell-widget-area .widget-numeric-text,
+.cell-widget-area .widget-colorpicker,
+.cell-widget-area .widget-textarea,
+.cell-widget-area .widget-radio,
+.cell-widget-area .widget-select,
+.cell-widget-area .widget-select-multiple,
+.cell-widget-area .widget-textarea,
+.cell-widget-area .widget-dropdown,
+.cell-widget-area .widget-html,
+.cell-widget-area .widget-button,
+.cell-widget-area .widget-toggle-button,
+.cell-widget-area .widget-toggle-buttons,
+.cell-widget-area .jupyter-widgets.panel-group,
+.cell-widget-area .widget-checkbox
+{
+  margin: var(--widgets-default-margin);
+}
+
+.cell-widget-area .widget-text input,
+.cell-widget-area .widget-numeric-text input,
+.cell-widget-area .widget-colorpicker input[type=text],
+.cell-widget-area .widget-textarea textarea,
+.cell-widget-area .widget-select-multiple select,
+.cell-widget-area .widget-select select
+{
+  width: var(--widgets-default-width);
+  line-height: var(--widgets-default-height);
+  background: var(--widgets-text-bg);
+  color: var(--widgets-text-color);
+  border: none;
+}
+
+.cell-widget-area .widget-text input,
+.cell-widget-area .widget-colorpicker input[type=text],
+.cell-widget-area .widget-numeric-text input
+{
+  height: calc(var(--widgets-default-height) - var(--widgets-text-voffset));
+  padding-bottom: var(--widgets-text-voffset);
+}
+
+.cell-widget-area button.widget-button,
+.cell-widget-area button.widget-toggle-button,
+.cell-widget-area .widget-toggle-buttons button,
+.cell-widget-area .widget-dropdown button,
+.cell-widget-area .jupyter-widgets.panel-group .panel-heading a,
+.cell-widget-area .nav-tabs a
+{
+  height: var(--widgets-default-height);
+  background: var(--widgets-button-bg);
+  color: var(--widgets-button-color);
+  border: var(--widgets-button-border);
+}
+
+.cell-widget-area button.widget-button:hover,
+.cell-widget-area button.widget-toggle-button:hover,
+.cell-widget-area .widget-toggle-buttons button:hover,
+.cell-widget-area .widget-dropdown button:hover,
+.cell-widget-area .jupyter-widgets.panel-group .panel-heading a:hover,
+.cell-widget-area .nav-tabs a:hover
+{
+  background: var(--widgets-button-bg-hover);
+  color: var(--widgets-button-color-hover);
+  border: var(--widgets-button-border-hover);
+}
+
+.cell-widget-area button.widget-toggle-button.active,
+.cell-widget-area .widget-toggle-buttons button.active,
+.cell-widget-area .nav-tabs li.active a
+{
+  background: var(--widgets-togglebutton-bg-active);
+}
+
+.cell-widget-area button.widget-toggle-button.active:hover,
+.cell-widget-area .widget-toggle-buttons button.active:hover,
+.cell-widget-area .nav-tabs li.active a:hover
+{
+  background: var(--widgets-togglebutton-bg-active-hover);
+}
+
+.cell-widget-area .widget-radio .widget-radio-box {
+ display: flex;
+ flex-direction: column;
+}
+
+.cell-widget-area .widget-radio .widget-radio-box input {
+ margin-right: var(--widgets-description-padding);
+}
+
+.cell-widget-area .widget-colorpicker input[type=text] {
+  width: calc(var(--widgets-default-width) - var(--widgets-dropdown-toggle-width));
+}
+
+.cell-widget-area .widget-colorpicker input[type=color] {
+  width: calc(var(--widgets-dropdown-toggle-width) - 2px);
+  padding: 0px;
+}
+
+.cell-widget-area .widget-dropdown button.widget-combo-btn {
+ line-height: normal;
+ width: calc(var(--widgets-default-width) - var(--widgets-dropdown-toggle-width));
+}
+
+.cell-widget-area .widget-dropdown button.dropdown-toggle:after {
+ content: "\f05b";
+ font-family: 'octicons';
+ font-weight: normal;
+ font-style: normal;
+ font-size: 9pt;
+}
+
+.cell-widget-area .widget-dropdown button.dropdown-toggle {
+ padding-top: 0px;
+ width: var(--widgets-dropdown-toggle-width);
+}
+
+
+.cell-widget-area .widget-dropdown .btn-group ul.dropdown-menu {
+ display: none;
+}
+
+.cell-widget-area .widget-dropdown .btn-group.open ul.dropdown-menu {
+ position: absolute;
+ display:block;
+width: var(--widgets-default-width);
+ max-width: var(--widgets-default-width);
+  line-height: var(--widgets-default-height);
+  background: var(--widgets-text-bg);
+  border: none;
+  margin-top: 0px;
+  list-style-type: none;
+padding-left: 0px;
+ -webkit-box-shadow: 2px 3px 5px rgba(0,0,0,.2);
+ -moz-box-shadow: 2px 3px 5px rgba(0,0,0,.2);
+ box-shadow: 2px 3px 5px rgba(0,0,0,.2);
+
+}
+
+.cell-widget-area .widget-dropdown .btn-group.open ul.dropdown-menu li a {
+color: var(--widgets-text-color);
+ text-decoration: none;
+ display: block;
+ width: 100%
+}
+
+.cell-widget-area .widget-dropdown .btn-group.open ul.dropdown-menu li:hover {
+background: var(--widgets-button-bg-hover);
+}
+
+.cell-widget-area .widget-dropdown .btn-group.open ul.dropdown-menu li:hover a {
+ color: var(--widgets-button-color-hover);
+}
+
+.cell-widget-area .jupyter-widgets.panel-group {
+  display: inline-block;
+  border-bottom: var(--widgets-container-border);
+}
+
+.cell-widget-area .jupyter-widgets.panel-group .panel-heading a {
+  text-decoration: none;
+}
+
+.cell-widget-area .jupyter-widgets.panel-group .panel-collapse {
+  display: none;
+}
+
+.cell-widget-area .jupyter-widgets.panel-group .panel-collapse.in {
+  display: block;
+}
+
+.cell-widget-area .jupyter-widgets.panel-group .panel-heading a {
+  text-decoration: none;
+  display: block;
+  height: calc(var(--widgets-default-height) - 2px);
+  padding-left: var(--widgets-description-padding);
+  padding-right: var(--widgets-description-padding);
+}
+
+.cell-widget-area .nav-tabs {
+  display: flex;
+  margin-top: var(--widgets-default-margin);
+  margin-left: var(--widgets-default-margin);
+  margin-right: var(--widgets-default-margin);
+}
+
+.cell-widget-area .nav-tabs a {
+  text-decoration: none;
+  display: inline-block;
+  height: calc(var(--widgets-default-height) - 2px);
+  padding-left: var(--widgets-description-padding);
+  padding-right: var(--widgets-description-padding);
+}
+
+.cell-widget-area .tab-pane {
+  display: none;
+}
+
+.cell-widget-area .tab-pane.in {
+  display: inline-block;
+  border-bottom: var(--widgets-container-border);
+}
+
+.cell-widget-area .widget-checkbox {
+  height: var(--widgets-default-height);
+}
+
+.cell-widget-area .widget-checkbox .widget-label {
+  width: initial;
+}
+
+.cell-widget-area .widget-checkbox input {
+  margin-top: 6px;
+  margin-right: var(--widgets-description-padding);
+}
+
+.cell-widget-area .widget-valid i:after {
+ font-family: 'octicons';
+ font-weight: normal;
+ font-style: normal;
+ font-size: 9pt;
+}
+
+.cell-widget-area .widget-valid i.fa-check:after {
+ content: "\f03a";
+ color: var(--widget-valid-color);
+}
+
+.cell-widget-area .widget-valid {
+ color: var(--widget-invalid-color);
+}
+
+.cell-widget-area .widget-valid i.fa-close:after {
+ content: "\f081";
+ margin-right: var(--widgets-description-padding);
 }
