Get slider working

--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -491,6 +491,15 @@ Widgets
   --widget-valid-color: lime;
   --widget-progress-bg: var(--cm-background);
   --widget-progress-color: var(--cm-activeline-bg);
+  --widget-slider-slide-bg: var(--widgets-text-bg);
+  --widget-slider-slide-height: 2px;
+  --widget-slider-slide-border: none;
+  --widget-slider-readout-width: 80px;
+  --widget-slider-readout-padding: var(--widgets-description-padding);
+  --widget-slider-handle-size: 10px;
+  --widget-slider-handle-radius: 4px;
+  --widget-slider-range-bg: var(--widgets-togglebutton-bg-active);
+  --widget-slider-range-height: var(--widget-slider-handle-size);
 }
 
 .cell-widget-area .widget-hprogress .progress {
@@ -535,7 +544,8 @@ Widgets
 .cell-widget-area .widget-toggle-button,
 .cell-widget-area .widget-toggle-buttons,
 .cell-widget-area .jupyter-widgets.panel-group,
-.cell-widget-area .widget-checkbox
+.cell-widget-area .widget-checkbox,
+.cell-widget-area .widget-hslider
 {
   margin: var(--widgets-default-margin);
 }
@@ -567,7 +577,8 @@ Widgets
 .cell-widget-area .widget-toggle-buttons button,
 .cell-widget-area .widget-dropdown button,
 .cell-widget-area .jupyter-widgets.panel-group .panel-heading a,
-.cell-widget-area .nav-tabs a
+.cell-widget-area .nav-tabs a,
+.cell-widget-area .widget-hslider .slider-container .ui-slider-handle
 {
   height: var(--widgets-default-height);
   background: var(--widgets-button-bg);
@@ -580,7 +591,8 @@ Widgets
 .cell-widget-area .widget-toggle-buttons button:hover,
 .cell-widget-area .widget-dropdown button:hover,
 .cell-widget-area .jupyter-widgets.panel-group .panel-heading a:hover,
-.cell-widget-area .nav-tabs a:hover
+.cell-widget-area .nav-tabs a:hover,
+.cell-widget-area .widget-hslider .slider-container .ui-slider-handle
 {
   background: var(--widgets-button-bg-hover);
   color: var(--widgets-button-color-hover);
@@ -755,4 +767,51 @@ background: var(--widgets-button-bg-hover);
 .cell-widget-area .widget-valid i.fa-close:after {
  content: "\f081";
  margin-right: var(--widgets-description-padding);
+}
+
+.cell-widget-area .widget-hslider .slider-container {
+  display: flex;
+  height: var(--widget-default-height);
+  padding-right: 5px
+}
+
+.cell-widget-area .widget-hslider .slider-container .ui-slider {
+  display: block;
+  width: calc(var(--widgets-default-width) - var(--widget-slider-readout-width));
+  background: var(--widget-slider-slide-bg);
+  height: var(--widget-slider-slide-height);
+  border: var(--widget-slider-slide-border);
+  padding-left: calc(var(--widget-slider-handle-size)/2);
+  margin: auto;
+  overflow: visible;
+}
+
+.cell-widget-area .widget-hslider .slider-container .ui-slider-handle {
+  position: relative;
+  display: block;
+  margin-top: calc(var(--widget-slider-handle-size)/-2);
+  margin-left: calc(var(--widget-slider-handle-size)/-2);
+  width: var(--widget-slider-handle-size);
+  height: var(--widget-slider-handle-size);
+  border-radius: var(--widget-slider-handle-radius);
+  z-index: 2;
+  top: 0px;
+}
+.cell-widget-area .widget-hslider .slider-container .ui-slider-handle:nth-child(3) {
+  top: -2px;
+}
+.cell-widget-area .widget-hslider .slider-container .ui-slider-range {
+  height: var(--widget-slider-range-height);
+  top: -1px;
+  margin-top: calc(-1*var(--widget-slider-handle-size));
+  margin-bottom: calc(-1*var(--widget-slider-handle-size));
+  position: relative;
+  display: block;
+  z-index: 1;
+  background: var(--widget-slider-range-bg);
+}
+
+.cell-widget-area .widget-hslider .widget-readout {
+  width: var(--widget-slider-readout-width);
+  padding-left: var(--widget-slider-readout-padding);
 }
