--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -414,3 +414,39 @@ li.CodeMirror-hint-active {
   background: var(--cm-hint-bg-active);
   color: var(--cm-hint-color-active);
 }
+
+.dropdown {
+    opacity: 1.0;
+    display: inline-block;
+}
+
+.dropdown__content {
+    opacity:  1.0;
+    position: absolute;
+    left: 8px;
+    border-color: gray;
+    border-width: 1px;
+    border-style: solid;
+    background-color: #FFF;
+    padding: 10px;
+    padding-top: 0px;
+    padding-right: 0px;
+    font-size: 11px;
+}
+
+.dropdown__content ul {
+    list-style: none;
+    text-align: left;
+    padding-left: 5px;
+}
+
+.dropdown__content ul li:hover {
+    background-color: #ecf0f1;
+    cursor: pointer;
+}
+
+
+
+.dropdown--active .dropdown__content {
+    display: block;
+}
