--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -41,7 +41,6 @@ body
     background-color: var(--main-bg-color);
     color: var(--main-fg-color);
 }
-
 img
 {
     display: block;
@@ -119,7 +118,7 @@ td {
     right: 0px;
     z-index: 99;
     height: 34px;
-    opacity: .5;
+
     /* Set the left padding to 50px to give users extra room to move their
     mouse to the toolbar without causing the cell to go out of focus and thus
     hide the toolbar before they get there. */
@@ -129,7 +128,8 @@ td {
 .cell-toolbar
 {
     display: inline-box;
-    background: var(--toolbar-bg);
+    background: var(--main-bg-color);
+    background-color: rgba(255, 255, 255, 0.3);
 }
 
 .cell-toolbar button
@@ -145,6 +145,7 @@ td {
     border: none;
     outline: none;
     background: none;
+
 }
 
 .cell-toolbar button span
@@ -153,6 +154,7 @@ td {
     line-height: 1;
 
     color: var(--toolbar-button);
+
 }
 
 .cell-toolbar button span:hover
@@ -416,9 +418,7 @@ li.CodeMirror-hint-active {
 }
 
 .dropdown {
-    opacity: 1.0;
     display: inline-block;
-
 }
 
 .dropdown__content {
@@ -435,12 +435,14 @@ li.CodeMirror-hint-active {
     padding-right: 0px;
     font-size: 11px;
     margin: 20px 0;
+    background-color: rgba(255,255,255,1);
 }
 
 .dropdown__content ul {
     list-style: none;
     text-align: left;
     padding-left: 5px;
+    opacity: 1.0;
 }
 
 .dropdown__content ul li:hover {
@@ -450,4 +452,5 @@ li.CodeMirror-hint-active {
 
 .dropdown--active .dropdown__content {
     display: inline-block;
+    opacity: 1.0;
 }
