Update styles for dropdown

--- a/static/styles/theme-christmas.css
+++ b/static/styles/theme-christmas.css
@@ -12,6 +12,9 @@
   --toolbar-button: #aaa;
   --toolbar-button-hover: #555;
 
+  --dropdown-content: white;
+  --dropdown-content-hover: grey;
+
   --pager-bg: #fafafa;
   --input-color: #8c8a8e;
 
