--- a/static/styles/theme-light.css
+++ b/static/styles/theme-light.css
@@ -8,9 +8,12 @@
   --cell-bg-hover: #eeedee;
   --cell-bg-focus: #e2dfe3;
 
-  --toolbar-bg: white;
+  --toolbar-bg: rgba(255,255,255,.5);
   --toolbar-button: #aaa;
   --toolbar-button-hover: #555;
+
+  --dropdown-content: white;
+  --dropdown-content-hover: gray;
 
   --pager-bg: #fafafa;
   --input-color: #8c8a8e;
