--- a/static/styles/theme-undefined.css
+++ b/static/styles/theme-undefined.css
@@ -8,10 +8,13 @@
   --cell-bg-hover: #eeedee;
   --cell-bg-focus: #e2dfe3;
 
-  --toolbar-bg: white;
+  --toolbar-bg: rgba(255,255,255,.3);
   --toolbar-button: #aaa;
   --toolbar-button-hover: #555;
 
+  --dropdown-content: white;
+  --dropdown-content-hover: gray;
+  
   --pager-bg: #fafafa;
   --input-color: #8c8a8e;
 
