--- a/static/styles/theme-light.css
+++ b/static/styles/theme-light.css
@@ -13,7 +13,7 @@
   --toolbar-button-hover: #555;
 
   --dropdown-content: white;
-  --dropdown-content-hover: gray;
+  --dropdown-content-hover: rgb(210,210,210);
 
   --pager-bg: #fafafa;
   --input-color: #8c8a8e;
