--- a/static/styles/theme-undefined.css
+++ b/static/styles/theme-undefined.css
@@ -13,8 +13,8 @@
   --toolbar-button-hover: #555;
 
   --dropdown-content: white;
-  --dropdown-content-hover: gray;
-  
+  --dropdown-content-hover: rgb(210,210,210);
+
   --pager-bg: #fafafa;
   --input-color: #8c8a8e;
 
